fix: align text to center

--- a/src/components/SpeakerModal/SpeakerModal.styles.scss
+++ b/src/components/SpeakerModal/SpeakerModal.styles.scss
@@ -47,11 +47,13 @@
 
     .name {
       font-size: 1.4rem;
+      text-align: center;
     }
 
     .profession {
       font-size: 1.2rem;
       color: #ff4929;
+      text-align: center;
     }
 
     .bio {
