--- a/src/pages/Speakers/Speakers.styles.scss
+++ b/src/pages/Speakers/Speakers.styles.scss
@@ -66,6 +66,7 @@
 
       .name {
         font-size: 1.4rem;
+        text-align: center;
       }
 
       .profession {
